--- a/vercel.json
+++ b/vercel.json
@@ -1,42 +1,35 @@
 {
   "buildCommand": "npm install --legacy-peer-deps && npm run build",
   "installCommand": "npm install --legacy-peer-deps",
-  "outputDirectory": "dist",
-  "framework": "vite",
+  "framework": "nextjs",
   "env": {
-    "VITE_FIREBASE_API_KEY": {
+    "NEXT_PUBLIC_FIREBASE_API_KEY": {
       "description": "Firebase API Key - Get from Firebase Console",
       "required": true
     },
-    "VITE_FIREBASE_AUTH_DOMAIN": {
+    "NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN": {
       "description": "Firebase Auth Domain",
       "required": true
     },
-    "VITE_FIREBASE_PROJECT_ID": {
+    "NEXT_PUBLIC_FIREBASE_PROJECT_ID": {
       "description": "Firebase Project ID",
       "required": true
     },
-    "VITE_FIREBASE_STORAGE_BUCKET": {
+    "NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET": {
       "description": "Firebase Storage Bucket",
       "required": true
     },
-    "VITE_FIREBASE_MESSAGING_SENDER_ID": {
+    "NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID": {
       "description": "Firebase Messaging Sender ID",
       "required": true
     },
-    "VITE_FIREBASE_APP_ID": {
+    "NEXT_PUBLIC_FIREBASE_APP_ID": {
       "description": "Firebase App ID",
       "required": true
-    }
-  },
-  "routes": [
-    {
-      "src": "/index.html",
-      "use": "@vercel/static"
     },
-    {
-      "src": "/(.*)",
-      "dest": "/index.html"
+    "NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID": {
+      "description": "Firebase Measurement ID (optional, for Analytics)",
+      "required": false
     }
-  ]
+  }
 }
